--- a/app/Resources/views/JouerController/afficher_plateau.html.twig
+++ b/app/Resources/views/JouerController/afficher_plateau.html.twig
@@ -105,7 +105,7 @@
             <div class="carte">
                 Libre
                 {% else %}
-                <div class="carte {{ tcartes[carte_id].couleur.libelle }}">
+                <div class="carte {{ tcartes[carte_id].couleur.texte }}">
                     <p class="numero">{{ tcartes[carte_id].numero }}</p>
                     {% endif %}
                 </div>
@@ -119,7 +119,7 @@
                 <div class="borne">
                     {% if borne.position == 'neutre' %}
                         {{ tbornes[borne.id_borne].image }}
-                        <p><a href="{{ path('app_jouer_revendiquerborne', {borne:borne.id_borne}) }}">Revendiquer</a></p>
+                        <p><a href="{{ path('app_jouer_revendiquerborne', {borne:borne.id_borne, partie:partie.id}) }}">Revendiquer</a></p>
                     {% else %}
                         -
                     {% endif %}
@@ -176,7 +176,6 @@
             {% endfor %}
         </div>
     </div>
-
     {% endblock %}
 
 {% block javascripts %}
